Fixed text overflow of error stacktrace

--- a/src/RaygunAspireWebApp/wwwroot/css/ai-error-res.css
+++ b/src/RaygunAspireWebApp/wwwroot/css/ai-error-res.css
@@ -44,6 +44,15 @@
     width: 50%;
 }
 
+.scroll-url {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.separate-scrollbar {
+    height: 8px;
+}
+
 .ai-chat-header-adj {
     width: calc(100% - 1px);
     margin-left: -1px;
